# game.netplay

./: .gitignore  CMakeLists.txt  Readme.md
depends/common/protobuf/: 0001-[cmake]-add-install-commands.patch  CMakeLists.txt  protobuf.txt  update_gtest_to_1.7.0.patch
game.netplay/: addon.xml
game.netplay/resources/: settings.xml
kodi/: kodi_addon_callbacks.h
lib/library.kodi.game/: Makefile  libKODI_game.cpp
lib/library.xbmc.addon/: Makefile  libXBMC_addon.cpp
messages/: addon.proto  game.proto
src/: Netplay.cpp  Netplay.h  client.cpp  main.cpp
src/filesystem/: Poller.cpp  Poller.h  StatStructure.cpp  StatStructure.h
src/filesystem/linux/: LinuxPoller.cpp  LinuxPoller.h
src/input/: IKeyboard.h  Keyboard.cpp  Keyboard.h  KeyboardAddon.cpp  KeyboardAddon.h  KeyboardConsole.cpp  KeyboardConsole.h
src/interface/: FrontendCallbackLib.cpp  FrontendCallbackLib.h  FrontendCallbacks.cpp  FrontendCallbacks.h  FrontendManager.cpp  FrontendManager.h  IFrontend.h  IGame.h
src/interface/dll/: DLLFrontend.cpp  DLLFrontend.h  DLLGame.cpp  DLLGame.h  FrontendCallbackLib.cpp  FrontendCallbackLib.h  FrontendCallbacks.cpp  FrontendCallbacks.h  FrontendDLL.cpp  FrontendDLL.h  GameDLL.cpp  GameDLL.h
src/interface/network/: AbortableServer.cpp  AbortableServer.h  Client.cpp  Client.h  Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  FrontendHandler.cpp  FrontendHandler.h  FrontendNetwork.cpp  FrontendNetwork.h  GameHandler.cpp  GameHandler.h  GameNetwork.cpp  GameNetwork.h  IConnection.h  IRequestHandler.h  IServer.h  IServerSocket.h  ISocket.h  MessageIncludes.h  Netplay.cpp  Netplay.h  NetplayUtils.cpp  NetplayUtils.h  Network.cpp  Network.h  NetworkFrontend.cpp  NetworkFrontend.h  NetworkGame.cpp  NetworkGame.h  NetworkTypes.h  RPC.h  RPCMethods.cpp  RPCMethods.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  (+6 more)
src/interface/network/linux/: LinuxConnection.cpp  LinuxConnection.h  LinuxServer.cpp  LinuxServer.h  LinuxServerSocket.cpp  LinuxServerSocket.h  LinuxSocket.cpp  LinuxSocket.h
src/interface/network/platform/: Client.cpp  Client.h  PlatformSocket.cpp  PlatformSocket.h
src/keyboard/: IKeyboard.h  Keyboard.cpp  Keyboard.h  KeyboardAddon.cpp  KeyboardAddon.h  KeyboardConsole.cpp  KeyboardConsole.h  KeyboardMock.cpp  KeyboardMock.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h
src/utils/: AbortableTask.cpp  AbortableTask.h  CommonIncludes.h  IAbortable.h  Observer.cpp  Observer.h  PathUtils.cpp  PathUtils.h  ReadWriteLock.cpp  ReadWriteLock.h  SignalHandler.cpp  SignalHandler.h  StringUtils.cpp  StringUtils.h  Version.cpp  Version.h  retro_endianness.h
